--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 body {
   margin: 0;
   background-color: var(--background-color);
-  font-family: Segoe UI,SegoeUI,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: Segoe UI, SegoeUI, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: var(--font-color);
 }
 
@@ -45,44 +45,34 @@ body {
   background-color: var(--dark-color);
   display: grid;
 
-  align-items: center;
-
-  grid-template-columns: 4em 0 auto;
-}
-
-.top-navbar-container a {
-  white-space: nowrap;
+  grid-template-columns: auto 0 auto;
 }
 
 .top-navbar-logo-container {
-  width: auto;
-  justify-self: right;
+  width: 100%;
 
   display: flex;
   flex-direction: row;
+
+  align-items: center;
 }
 
 .top-navbar-logo-container p {
   font-weight: normal;
   font-family: Blanka;
-  font-size: 3rem;
+  font-size: 2rem;
   color: white;
 
-  margin: 0 1rem 1.2rem 0;
-  align-self: center;
+  margin: 0 1rem 0.8rem 0;
 }
 
-.top-navbar-image-container {
-  width: 4rem;
-  padding: 0.5rem;
+.top-navbar-logo-container img {
+  width: 3rem;
+  height: 3rem;
+  margin: 0.5rem;
 }
 
-.top-navbar-image-container img {
-  width: 100%;
-  height: auto;
-}
-
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 950px) {
   .active {
     font-weight: bold;
     font-size: 1.2em;
@@ -90,15 +80,17 @@ body {
 
   .top-navbar {
     align-items: center;
-    direction: rtl;
-    justify-content: left;
-    grid-template-columns: 4rem 0.35rem auto;
+    grid-template-columns: 17rem 0.35rem auto;
+  }
+
+  .top-navbar-logo-container p {
+    font-size: 3rem;
+    margin: 0 1rem 1.2rem 0;
   }
 
   .top-navbar-container {
     display: flex;
     flex-direction: row;
-    direction: ltr;
     align-items: center;
 
     height: 100%;
@@ -118,17 +110,63 @@ body {
   }
 
   .top-navbar-divider {
-    justify-self: center;
     width: 100%;
     height: 60%;
     background-color: white;
     border-radius: 1rem;
-  }
 
-  .top-navbar-logo-container {
-    direction: ltr;
+    justify-self: flex-start;
   }
 }
+
+/* Footer */
+
+footer {
+  background-color: var(--dark-color);
+
+  display: grid;
+  grid-template-rows: auto auto auto;
+  justify-content: center;
+
+  padding: 1rem 0 4rem 0;
+  margin-top: 1rem;
+}
+
+footer h1 {
+  text-align: center;
+  color: white;
+
+  font-family: Blanka;
+  font-weight: normal;
+  font-size: 4em;
+
+  margin: 0;
+}
+
+footer p {
+  text-align: center;
+  color: white;
+  opacity: 0.5;
+  font-size: 0.9em;
+}
+
+.legal-link-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.legal-link-container a {
+  color: white;
+  text-decoration: none;
+  margin: 0 1rem;
+}
+
+.legal-link-container a:hover {
+  text-decoration: underline;
+}
+
+/* index.html */
 
 /* Front Page Header */
 
@@ -165,6 +203,33 @@ body {
 }
 
 /* QNA */
+
+.question {
+  width: 90vw;
+  margin: auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.question img {
+  width: 100%;
+  margin: 2rem;
+}
+
+@media screen and (min-width: 1500px) {
+  .question {
+    width: 80rem;
+
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: column;
+
+    justify-content: center;
+  }
+}
 
 /* Contributors */
 
@@ -234,51 +299,5 @@ body {
 }
 
 .github:hover {
-  text-decoration: underline;
-}
-
-/* Footer */
-
-footer {
-  background-color: var(--dark-color);
-
-  display: grid;
-  grid-template-rows: auto auto auto;
-  justify-content: center;
-
-  padding: 1rem 0 4rem 0;
-}
-
-footer h1 {
-  text-align: center;
-  color: white;
-
-  font-family: Blanka;
-  font-weight: normal;
-  font-size: 4em;
-
-  margin: 0;
-}
-
-footer p {
-  text-align: center;
-  color: white;
-  opacity: 0.5;
-  font-size: 0.9em;
-}
-
-.legal-link-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.legal-link-container a {
-  color: white;
-  text-decoration: none;
-  margin: 0 1rem;
-}
-
-.legal-link-container a:hover {
   text-decoration: underline;
 }
