--- a/style.css
+++ b/style.css
@@ -45,7 +45,23 @@ body {
   background-color: var(--dark-color);
   display: grid;
 
-  grid-template-columns: auto 0 auto;
+  grid-template-columns: auto 0 0 5rem;
+}
+
+.top-navbar-container {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+
+  position: fixed;
+  right: 0;
+
+  width: 45vw;
+
+  background-color: var(--dark-color);
+
+  visibility: hidden;
 }
 
 .top-navbar-logo-container {
@@ -72,6 +88,30 @@ body {
   margin: 0.5rem;
 }
 
+.hamburger-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 4rem;
+  height: 4rem;
+
+  margin-right: 1rem;
+
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.bar {
+  width: 100%;
+  height: 0.4rem;
+  background-color: white;
+  margin-bottom: 0.3rem;
+  border-radius: 1rem;
+}
+
 @media screen and (min-width: 950px) {
   .active {
     font-weight: bold;
@@ -80,7 +120,7 @@ body {
 
   .top-navbar {
     align-items: center;
-    grid-template-columns: 17rem 0.35rem auto;
+    grid-template-columns: 17rem 0.35rem auto 0;
   }
 
   .top-navbar-logo-container p {
@@ -89,11 +129,14 @@ body {
   }
 
   .top-navbar-container {
-    display: flex;
     flex-direction: row;
-    align-items: center;
 
+    position: relative;
+
+    width: 100%;
     height: 100%;
+
+    visibility: visible;
   }
 
   .top-navbar-container a {
@@ -116,6 +159,10 @@ body {
     border-radius: 1rem;
 
     justify-self: flex-start;
+  }
+
+  .hamburger-button {
+    display: none;
   }
 }
 
@@ -271,6 +318,7 @@ footer p {
 
 .contributor img {
   width: 100%;
+  height: 100%;
 }
 
 .name {
